# Valle2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: analysis.yml  tests.yml
tests/: test_encodec_pip.py  test_models_utils.py  test_modules.py  test_valle.py  test_valle_ar.py
valle/: collate.py  config.py  data.py  hparams.py  train_model.py  utils.py
valle/models/: __init__.py  encodec_pip.py  modules.py  utils.py  valle_ar.py  valle_nar.py
