[tool.poetry]
name = "valle"
version = "0.1.0"
description = "Implementation of TTS and ASR model based on VALL-E X architecture"
authors = ["KubiakJakub01 <kubiak.jakub01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
